force-app/main/default/objects/IbdQualification__e.object
<CustomObject>
    <description>Inbound qualifications and awards</description>
    <fields>
        <fullName>Award_Faculty_Code__c</fullName>
        <label>Award Faculty Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Faculty_Name__c</fullName>
        <label>Award Faculty Name</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Award_Faculty_Start_Date__c</fullName>
        <label>Award Faculty Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Award_Institution_Code__c</fullName>
        <label>Award Institution Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_Institution_Name__c</fullName>
        <label>Award Institution Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>This field captures the course code of the course attempt</description>
        <label>Course_Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Version__c</fullName>
        <description>This field captures course version number</description>
        <label>Course Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Achieved__c</fullName>
        <description>This field captures qualification/award date achieved</description>
        <label>Date_Achieved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>This filed is to capture the type of event example INSERT, UPDATE and DELETE</description>
        <label>Event_Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Graduation_Date__c</fullName>
        <description>This field captures the graduation date</description>
        <label>Graduation_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name_at_Completion__c</fullName>
        <label>Name at Completion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Obtained_Status__c</fullName>
        <label>Obtained Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <description>This field captures person id</description>
        <label>Person_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Code__c</fullName>
        <description>This field describes the SMS award code</description>
        <label>Qualification_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Grade__c</fullName>
        <description>This field captures the qualification/award grade</description>
        <label>Qualification_Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Mark__c</fullName>
        <description>This field captures the marks on the qualification/award</description>
        <label>Qualification_Mark</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Name__c</fullName>
        <description>This field captures the name of the award/qualification in SMS</description>
        <label>Qualification_Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_Type__c</fullName>
        <label>Qualification_Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Testamur_Type__c</fullName>
        <description>This field captures the testamur type for the qulification</description>
        <label>Testamur_Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thesis_Title__c</fullName>
        <label>Thesis Title</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <label>Inbound Qualification</label>
    <pluralLabel>Inbound Qualifications</pluralLabel>
</CustomObject>